# AutoPwn

./: README.md  pyproject.toml  requirements.txt  setup.sh
autopwn/: __init__.py  __main__.py  cli.py  config.py  context.py
autopwn/agent/: __init__.py  action_utils.py  agent.py  observer.py  state.py
autopwn/analysis/: behavior.py  cfg_builder.py  dataflow.py  decompiler.py  exploit_primitive.py  path_explorer.py  pattern_matcher.py  struct_recovery.py  taint.py  vuln_finder.py
autopwn/cache/: result_cache.py
autopwn/dynamic/: constraint_prober.py  crash_triage.py  heap_tracer.py  interaction.py  interaction_prober.py  leak_verifier.py  menu_probe.py  offset.py
autopwn/engine/: crash_diag.py  engine.py  path_synthesizer.py  planner.py  scorer.py
autopwn/exploit/: __init__.py  base.py  chain_builder.py  cmd_inject.py
autopwn/io/: bad_bytes.py  leak_parser.py  protocol.py  tube.py
autopwn/libc/: finder.py  local_db.py  one_gadget.py  resolver.py
autopwn/output/: logger.py  report.py  script_gen.py
autopwn/recon/: __init__.py  binary.py  checksec.py  disasm.py  functions.py  gadgets.py  got_plt.py  r2_analyzer.py  seccomp.py  strings.py
autopwn/symbolic/: constraint_solver.py  input_synthesizer.py  symex.py
libc-database/db/: local-19d65d1678e0fa36a3f37f542e1afd31e439f1bd.info  local-c4b70d5f6981ea2de11016845739bd2b985547fe.info  local-cd75f54a8321ad0885c9a714f06de6f7aaa5d4af.info  (+1 more)
new/: CET6  Moon_note.note  easyrop  pwn (18)  pwn (19)  pwn (20)  pwn01  pwn01-guess  pwn02 (1)  pwn03-login  pwn04-wo_kan_xing.xing  ret2libc_64
(+55 files in other folders)
